# Chat_with_Document_RAG

./: README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
frontend/: .env.example  .oxlintrc.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  style.css  types.ts
frontend/src/components/: ChatInput.tsx  ChatMessages.tsx  DocumentBadge.tsx
frontend/src/components/ui/: button.tsx  textarea.tsx
